syntax = "proto3";

package dalalstreet.api.actions;

option java_multiple_files=true;

message ChangePasswordRequest{
    
    string tempPassword=1;
    string newPassword=2;
    
}

message ChangePasswordResponse{
       enum StatusCode {
        OK = 0;
        InternalServerError = 1;
        InvalidCredentialsError = 2;
        TemporaryPasswordExpiredError = 3;

    }
    StatusCode status_code = 1;
    string     status_message = 2;
}